New fix and others

--- a/borehole.html
+++ b/borehole.html
@@ -75,17 +75,17 @@
                 </a>
             </div>
             <div class="nav">
-                <a class="link" href="#what-is">
-                    Что это?
+                <a class="link" href="index.html">
+                    На главную
                 </a>
-                <a class="link" href="#best">
-                    Преимущества
+                <a class="link" href="catalog.html">
+                    Каталог
                 </a>
-                <a class="link" href="#how-it">
-                    Как это работает
+                <a class="link active" href="borehole.html">
+                    Геотермальная скважина
                 </a>
-                <a class="link" href="#faq">
-                    FAQ
+                <a class="link" href="calculate.html">
+                    Рассчитать стоимость
                 </a>
                 <button class="lang">
                     EN
@@ -113,11 +113,11 @@
             <div class="col-md-7">
                 <div class="hero-text">
                     <h1 class="title-hero">Геотермальная скважина</h1>
-                    <p>экономичная и № 1 по эффективности<br/>
-                        для отопления и охлаждения</p>
+                    <p>Экономичная и эффективная система<br/>
+                        отопления и охлаждения</p>
                     <div class="btns">
                         <button class="btn btn-pry">Оставить заявку</button>
-                        <a href="calculate.html" class="btn btn-sndry">Сделать расчет</a>
+                        <a href="calculate.html" class="btn btn-sndry">Рассчитать</a>
                     </div>
                 </div>
             </div>
@@ -140,7 +140,7 @@
                 <div class="bore-card">
                     <div class="card-tabs">
                         <button class="btn-bore active">
-                            Общее
+                            О системе
                             <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M5.5 2C3.84315 2 2.5 3.34315 2.5 5V8C2.5 9.65685 3.84315 11 5.5 11H8.5C10.1569 11 11.5 9.65685 11.5 8V5C11.5 3.34315 10.1569 2 8.5 2H5.5ZM4.5 5C4.5 4.44772 4.94772 4 5.5 4H8.5C9.05228 4 9.5 4.44772 9.5 5V8C9.5 8.55228 9.05228 9 8.5 9H5.5C4.94772 9 4.5 8.55228 4.5 8V5Z" fill="currentColor"/>
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M16.5 2C14.8431 2 13.5 3.34315 13.5 5V8C13.5 9.65685 14.8431 11 16.5 11H19.5C21.1569 11 22.5 9.65685 22.5 8V5C22.5 3.34315 21.1569 2 19.5 2H16.5ZM15.5 5C15.5 4.44772 15.9477 4 16.5 4H19.5C20.0523 4 20.5 4.44772 20.5 5V8C20.5 8.55228 20.0523 9 19.5 9H16.5C15.9477 9 15.5 8.55228 15.5 8V5Z" fill="currentColor"/>
@@ -149,14 +149,14 @@
                             </svg>                                
                         </button>
                         <button class="btn-bore">
-                            Механизм
+                            Отопление
                             <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M12.5005 7C9.73907 7 7.50049 9.23858 7.50049 12C7.50049 14.7614 9.73907 17 12.5005 17C15.2619 17 17.5005 14.7614 17.5005 12C17.5005 9.23858 15.2619 7 12.5005 7ZM9.50049 12C9.50049 10.3431 10.8436 9 12.5005 9C14.1573 9 15.5005 10.3431 15.5005 12C15.5005 13.6569 14.1573 15 12.5005 15C10.8436 15 9.50049 13.6569 9.50049 12Z" fill="currentColor"/>
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M12.5003 0C10.8435 0 9.50031 1.34315 9.50031 3V3.5124C8.44628 3.88495 7.48304 4.44786 6.65171 5.15921L6.20601 4.90188C4.77114 4.07346 2.93636 4.56508 2.10794 5.99996C1.27951 7.43484 1.77113 9.26961 3.20601 10.098L3.65054 10.3547C3.55181 10.8887 3.50031 11.4387 3.50031 12C3.50031 12.5657 3.55262 13.1198 3.65284 13.6577L3.20219 13.912C1.75644 14.7277 1.254 16.5663 2.084 18.0039C2.91136 19.4369 4.74661 19.9234 6.17516 19.0883L6.63017 18.8223C7.46527 19.5414 8.43455 20.1103 9.49602 20.4861L9.49175 20.9738C9.47715 22.6408 10.8245 24 12.4916 24C14.1381 24 15.4769 22.6728 15.4914 21.0263L15.4961 20.4891C16.551 20.1168 17.5151 19.5539 18.3471 18.8423L18.7613 19.0839C20.197 19.9212 22.0398 19.4318 22.8708 17.9924C23.6966 16.562 23.2109 14.7332 21.7841 13.901L21.3497 13.6476C21.4487 13.1129 21.5003 12.5621 21.5003 12C21.5003 11.4379 21.4487 10.8872 21.3497 10.3524L21.7842 10.099C23.2109 9.26686 23.6966 7.438 22.8708 6.00762C22.0398 4.56826 20.1969 4.07884 18.7613 4.9162L18.3472 5.15772C17.5162 4.44708 16.5536 3.88469 15.5003 3.5124V3C15.5003 1.34315 14.1572 0 12.5003 0ZM11.5003 3C11.5003 2.44772 11.948 2 12.5003 2C13.0526 2 13.5003 2.44772 13.5003 3V4.25204C13.5003 4.70832 13.8092 5.10674 14.2511 5.22047C15.5011 5.54222 16.6176 6.20155 17.4967 7.09734C17.8189 7.42565 18.3235 7.49182 18.7194 7.25767L18.9323 7.13175L18.9375 7.1287L19.7689 6.64382C20.2475 6.3647 20.8617 6.52784 21.1387 7.00762C21.414 7.48441 21.2521 8.09402 20.7765 8.3714L19.9395 8.85958L19.7344 8.96997C19.3228 9.19143 19.1196 9.6684 19.2449 10.1186C19.4111 10.7161 19.5003 11.3468 19.5003 12C19.5003 12.6521 19.4114 13.2818 19.2457 13.8785C19.122 14.3237 19.3195 14.7957 19.7233 15.0202L19.9337 15.1371L20.7765 15.6287C21.2521 15.906 21.414 16.5156 21.1387 16.9924C20.8617 17.4722 20.2475 17.6354 19.7689 17.3563L18.9323 16.8683C18.9238 16.8634 18.9152 16.8585 18.9066 16.8538L18.6818 16.7315C18.2898 16.5181 17.8039 16.5904 17.4909 16.9086C16.6127 17.8014 15.4984 18.4585 14.2511 18.7795C13.8092 18.8933 13.5003 19.2917 13.5003 19.748V19.9956L13.4914 21.0088C13.4866 21.5576 13.0404 22 12.4916 22C11.9359 22 11.4868 21.5469 11.4917 20.9913L11.5003 20.0088V19.748C11.5003 19.2917 11.1915 18.8933 10.7496 18.7795C9.49104 18.4556 8.36793 17.7895 7.48612 16.8845C7.16549 16.5554 6.66187 16.4871 6.26521 16.719L5.16583 17.3617C4.69452 17.6372 4.08902 17.4767 3.81605 17.0039C3.54221 16.5296 3.70798 15.923 4.18497 15.6539L5.28702 15.0321C5.68804 14.8058 5.88273 14.335 5.75861 13.8916C5.59051 13.291 5.50031 12.6569 5.50031 12C5.50031 11.3498 5.58869 10.7219 5.75349 10.1268C5.87439 9.6903 5.68679 9.22704 5.29624 8.99764L5.07852 8.86973L4.20601 8.36598C3.72772 8.08984 3.56384 7.47825 3.83999 6.99996C4.11613 6.52167 4.72772 6.35779 5.20601 6.63393L6.05564 7.12447L6.25278 7.24847C6.65111 7.49902 7.17024 7.43795 7.49955 7.10179C8.37932 6.20373 9.49742 5.54275 10.7496 5.22047C11.1915 5.10674 11.5003 4.70832 11.5003 4.25204V3Z" fill="currentColor"/>
                             </svg>                                                      
                         </button>
                         <button class="btn-bore">
-                            Лето
+                            Охлаждение
                             <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_1267_651)">
                                 <path d="M12.5 0C13.0523 0 13.5 0.447715 13.5 1V2C13.5 2.55228 13.0523 3 12.5 3C11.9477 3 11.5 2.55228 11.5 2V1C11.5 0.447715 11.9477 0 12.5 0Z" fill="currentColor"/>
@@ -199,7 +199,7 @@
                                 </svg>
                                     
                             </span>
-                            <h3>Общее</h3>
+                            <h3>О системе</h3>
                             <p>Геотермальная система отопления — это технология обогрева с использованием природного тепла земли. На большой глубине температура почвы держится на уровне 7-10 градусов выше нуля и в зимнее, и в летнее время. Это позволяет использовать тепло для автономного отопления помещений.</p>            
                         </div>
                         <div class="card-info">
@@ -209,8 +209,8 @@
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0004 0C13.7913 0 12.0004 1.79086 12.0004 4V4.6832C10.595 5.17993 9.31072 5.93048 8.20228 6.87894L7.60802 6.53584C5.69485 5.43128 3.24848 6.08678 2.14391 7.99995C1.03935 9.91312 1.69485 12.3595 3.60802 13.464L4.20072 13.8062C4.06909 14.5183 4.00041 15.2516 4.00041 16C4.00041 16.7542 4.07016 17.4931 4.20379 18.2103L3.60293 18.5493C1.67525 19.6369 1.00534 22.0884 2.112 24.0052C3.21515 25.9159 5.66215 26.5645 7.56688 25.4511L8.17356 25.0964C9.28702 26.0552 10.5794 26.8137 11.9947 27.3148L11.989 27.965C11.9695 30.1877 13.766 32 15.9887 32C18.1842 32 19.9693 30.2304 19.9885 28.0351L19.9948 27.3188C21.4013 26.8224 22.6868 26.0719 23.7962 25.1231L24.3484 25.4452C26.2626 26.5616 28.7197 25.909 29.8277 23.9899C30.9288 22.0827 30.2812 19.6442 28.3788 18.5347L27.7995 18.1968C27.9315 17.4839 28.0004 16.7495 28.0004 16C28.0004 15.2505 27.9315 14.5162 27.7996 13.8033L28.3789 13.4653C30.2812 12.3558 30.9288 9.91734 29.8277 8.01016C28.7197 6.09102 26.2626 5.43845 24.3483 6.55494L23.7962 6.87696C22.6883 5.92944 21.4048 5.17959 20.0004 4.6832V4C20.0004 1.79086 18.2096 0 16.0004 0ZM14.6671 4C14.6671 3.26362 15.264 2.66667 16.0004 2.66667C16.7368 2.66667 17.3337 3.26362 17.3337 4V5.66938C17.3337 6.27776 17.7456 6.80899 18.3347 6.96063C20.0015 7.38963 21.4901 8.26873 22.6623 9.46312C23.0919 9.90087 23.7647 9.98909 24.2926 9.67689L24.5765 9.509L24.5834 9.50493L25.6919 8.85842C26.3299 8.48626 27.149 8.70378 27.5183 9.34349C27.8853 9.97921 27.6695 10.792 27.0354 11.1619L25.9194 11.8128L25.6459 11.96C25.0971 12.2552 24.8261 12.8912 24.9931 13.4915C25.2148 14.2882 25.3337 15.1291 25.3337 16C25.3337 16.8695 25.2152 17.7091 24.9942 18.5046C24.8293 19.0982 25.0926 19.7276 25.6311 20.0269L25.9116 20.1828L27.0354 20.8382C27.6695 21.208 27.8853 22.0209 27.5183 22.6566C27.149 23.2963 26.33 23.5138 25.6919 23.1417L24.5765 22.4911C24.5651 22.4845 24.5536 22.478 24.5421 22.4717L24.2424 22.3087C23.7197 22.0242 23.0718 22.1205 22.6545 22.5448C21.4836 23.7351 19.9978 24.6113 18.3347 25.0394C17.7456 25.191 17.3337 25.7222 17.3337 26.3306V26.6608L17.3219 28.0117C17.3155 28.7435 16.7205 29.3333 15.9887 29.3333C15.2479 29.3333 14.6491 28.7292 14.6556 27.9884L14.6671 26.6783V26.3306C14.6671 25.7222 14.2553 25.191 13.6661 25.0394C11.9881 24.6075 10.4906 23.7194 9.31483 22.5126C8.88732 22.0738 8.21583 21.9828 7.68695 22.292L6.22111 23.1489C5.59269 23.5162 4.78536 23.3022 4.4214 22.6718C4.05628 22.0394 4.27731 21.2306 4.9133 20.8718L6.38269 20.0428C6.91738 19.7411 7.17697 19.1133 7.01148 18.5221C6.78735 17.7214 6.66708 16.8758 6.66708 16C6.66708 15.1331 6.78492 14.2958 7.00466 13.5024C7.16585 12.9204 6.91572 12.3027 6.39499 11.9969L6.10469 11.8263L4.94135 11.1546C4.30363 10.7865 4.08513 9.971 4.45332 9.33328C4.82151 8.69556 5.63696 8.47706 6.27468 8.84525L7.40752 9.49929L7.67037 9.66462C8.20148 9.99869 8.89365 9.91726 9.33274 9.46905C10.5058 8.27165 11.9966 7.39034 13.6661 6.96063C14.2553 6.80899 14.6671 6.27776 14.6671 5.66938V4Z" fill="#333333"/>
                                 </svg>                                                                                                       
                             </span>
-                            <h3>Механизм</h3>
-                            <p>Основным элементом механизма является геотермальная скважина — это глубокий колодец с коллектором, пробуренный в скальном грунте или почве, пропускающей воду. Коллектор собирает тепло под землей и с помощью хладагента переносит в обогревательные приборы в доме.</p>            
+                            <h3>Отопление</h3>
+                            <p>Основным элементом механизма является геотермальная скважина — это глубокий колодец с коллектором, пробуренный в скальном грунте или почве, пропускающей воду. В холодное время года коллектор собирает тепло под землей и с помощью хладагента переносит в обогревательные приборы в доме.</p>            
                         </div>
                         <div class="card-info">
                             <span class="icon">
@@ -237,7 +237,7 @@
                                     </defs>
                                 </svg>                                                                                                     
                             </span>
-                            <h3>Лето</h3>
+                            <h3>Охлаждение</h3>
                             <p>В летнее время система работает наоборот: хладагент подает в дом прохладу из земных недр, а лишнее тепло из дома передает назад в землю.</p>            
                         </div>
                         <div class="card-info">
@@ -248,7 +248,7 @@
                                 </svg>                                    
                             </span>
                             <h3>Выгода</h3>
-                            <p>Благодаря этому система работает эффективно при любых погодных условиях и производит в 4 раз больше энергии, а на охлаждение в 13 раз дешевле, чем затраченное электричество.</p>            
+                            <p>Система работает эффективно при любых погодных условиях. При отоплении производит в 4 раза больше энергии, чем затраченное на работу системы электричество, при этом охлаждение обойдется в 13 раз дешевле затрат на электроэнергию.</p>            
                         </div>
                     </div>
                 </div>
