--- a/calculate.html
+++ b/calculate.html
@@ -84,17 +84,17 @@
                 </a>
             </div>
             <div class="nav">
-                <a class="link" href="#">
-                    Что это?
+                <a class="link" href="index.html">
+                    На главную
                 </a>
-                <a class="link" href="#">
-                    Преимущества
+                <a class="link" href="catalog.html">
+                    Каталог
                 </a>
-                <a class="link" href="#">
-                    Как это работает
+                <a class="link" href="borehole.html">
+                    Геотермальная скважина
                 </a>
-                <a class="link" href="#">
-                    Новости
+                <a class="link active" href="calculate.html">
+                    Рассчитать стоимость
                 </a>
                 <button class="lang">
                     EN
