--- a/index.html
+++ b/index.html
@@ -74,17 +74,20 @@
                 </a>
             </div>
             <div class="nav">
-                <a class="link" href="#">
+                <a class="link" href="#what-is">
                     Что это?
                 </a>
-                <a class="link" href="#">
+                <a class="link" href="#advantages">
                     Преимущества
                 </a>
-                <a class="link" href="#">
+                <a class="link" href="#how-it-work">
                     Как это работает
                 </a>
                 <a class="link" href="#news">
                     Новости
+                </a>
+                <a class="link" href="#faq">
+                    FAQ
                 </a>
                 <button class="lang">
                     EN
@@ -115,13 +118,11 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="hero-text">
-                    <h1 class="title-main">Климатическая система для дома: кондиционирование, влажность,
-                        отопление,
-                        возобновляемый источник энергии</h1>
+                    <h1 class="title-main">Климатическая система для дома: кондиционирование, влажность, отопление, возобновляемый источник энергии</h1>
                     <p>Экологичный комфорт и равномерное распределение температуры по всему помещению</p>
                     <div class="btns">
                         <button class="btn btn-pry">Оставить заявку</button>
-                        <a href="calculate.html" class="btn btn-sndry">Сделать расчет</a>
+                        <a href="calculate.html" class="btn btn-sndry">Рассчитать</a>
                     </div>
                 </div>
             </div>
@@ -228,32 +229,27 @@
             </div>
         </section>
 
-        <section class="section-pd what-is">
+        <section class="section-pd what-is" id="what-is">
             <div class="container">
                 <div class="row">
 
                     <div class="col-md-6">
-                        <h2 class="title-main mb-3">Что это такое?</h2>
-                        <p>Холодный потолок — это технология, которая используется вместо кондиционеров.</p>
-                        <p>Помещение охлаждается благодаря капиллярным матам — системе из трубок, устойчивых к коррозии,
-                            перепадам температуры и давлению. А в качестве теплоносителя используется чистая
-                            дистиллированная
-                            вода.</p>
-                        <p>Система равномерно распределяет прохладу и создает комфортный и здоровый микроклимат по всему
-                            дому.
-                            Она не выделяет вредных веществ, не вызывает аллергии и не наносит вред окружающей
-                            среде.</p>
-                        <p>Капиллярные маты можно установить под штукатурку, бетон, гипсокартон или металлические
-                            панели. В них
-                            не возникает накипь, не попадает грязь и не накапливается конденсат.</p>
-                        <p>Капилляры не требуют технической поддержки и могут прослужить более 50 лет.</p>
+                        <div class="what-is-info">
+                            <h2 class="title-main mb-3">Что это такое?</h2>
+                            <p>Конструкция состоит из водяных капиллярных матов, соединительных труб и фитингов, приборов измерения и контроля, теплообменника, бойлера и охлаждающего устройства. Вода в систему заливается только один раз и циркулирует по полипропиленовым трубам под рабочим давлением 2-3 бар.</p>
+                            <p>Мы создаем систему, которую можно применять для отопления, охлаждения, увлажнения и осушения помещений. Эти функции можно комбинировать между собой, чтобы создать максимально комфортную климатическую среду в вашем доме.</p>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <img class="what-is-img" src="img/videos/mats-two.png" />
                     </div>
 
                 </div>
             </div>
         </section>
 
-        <section class="section-pd advantages">
+        <section class="section-pd advantages" id="advantages">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -263,9 +259,9 @@
                             <!-- 1 Card -->
                             <div class="card-item">
                                 <div class="info">
-                                    <span class="card-label">Тишина</span>
-                                    <h3>Работает бесшумно</h3>
-                                    <p>Вы не услышите звуки устройства, шум внутренних блоков или журчание воды</p>
+                                    <span class="card-label">Нет налета</span>
+                                    <h3>Нет налета</h3>
+                                    <p>В капиллярных матах не образуется известняк — при отоплении вода нагревается до +32°C, а при охлаждении остывает до +18°C</p>
                                 </div>
                                 <div class="image">
                                     <div class="image-item">
@@ -279,9 +275,8 @@
                             <div class="card-item">
                                 <div class="info">
                                     <span class="card-label">Чистый воздух</span>
-                                    <h3>Не вызывает аллергии и переохлаждения</h3>
-                                    <p>С комфортной влажностью и отсутствием вентиляторов не будет сырости, пыли и
-                                        сквозняков</p>
+                                    <h3>Отсутствие грязи</h3>
+                                    <p>Система защищена и от коррозии — мы используем качественные компоненты из PPR, ПНД, нержавеющей стали, латуни и бронзы</p>
                                 </div>
                                 <div class="image">
                                     <div class="image-item">
@@ -295,9 +290,8 @@
                             <div class="card-item">
                                 <div class="info">
                                     <span class="card-label">Компактность</span>
-                                    <h3>Не сужает пространство</h3>
-                                    <p>Установка не заметна под отделкой, не занимает много места и не уменьшает высоту
-                                        потолков</p>
+                                    <h3>Проверка безопасности</h3>
+                                    <p>Перед вводом в эксплуатацию тестируем систему давлением воздуха 20 бар и давлением воды 10 бар</p>
                                 </div>
                                 <div class="image">
                                     <div class="image-item">
@@ -311,9 +305,8 @@
                             <div class="card-item">
                                 <div class="info">
                                     <span class="card-label">Энергоэффективность</span>
-                                    <h3>Экономит энергию</h3>
-                                    <p>Сокращает потребление электричества на 30% в сравнении с обычными
-                                        кондиционерами</p>
+                                    <h3>Легкая эксплуатация</h3>
+                                    <p>Капиллярные маты легко ремонтируются — для этого трубка разрезается и оба конца привариваются без влияния на мощность нагрева и охлаждения</p>
                                 </div>
                                 <div class="image">
                                     <div class="image-item">
@@ -324,7 +317,7 @@
                                 </div>
                             </div>
                             <!-- 5 Card -->
-                            <div class="card-item">
+                            <!-- <div class="card-item">
                                 <div class="info">
                                     <span class="card-label">Гибкость</span>
                                     <h3>Устанавливается на любых поверхностях</h3>
@@ -337,7 +330,7 @@
                                         </picture>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
 
                         </div>
                     </div>
@@ -345,7 +338,7 @@
             </div>
         </section>
 
-        <section class="section-pd how-it-work">
+        <section class="section-pd how-it-work" id="how-it-work">
             <div class="container col">
                 <h2 class="title-main text-center slider-title mb-5">Как это работает</h2>
                 <div class="slider-content">
@@ -502,7 +495,7 @@
             </div>
         </section>
 
-        <section class="section-pd faq">
+        <section class="section-pd faq" id="faq">
             <div class="container">
                 <div class="row">
 
@@ -575,7 +568,7 @@
                             <div class="group-callback">
                                 <label>Меня зовут</label>
                                 <input class="input-callback _req" type="text" id="name" name="name"
-                                       placeholder="Пример: Азамат"/>
+                                       placeholder="Ваше имя"/>
                             </div>
                             <div class="group-radio-list">
                                 <span class="radio-title">Мне интересна</span>
@@ -601,7 +594,7 @@
                             </div>
                             <div id="phoneError" class="error-message"></div>
                             <textarea class="input-callback" rows="1" name="comments"
-                                      placeholder="Напишите дополнительные комментарии (если имеется)"></textarea>
+                                      placeholder="Ваш комментарий к заявке"></textarea>
                             <button id="formButton" class="btn btn-pry" type="submit">Оставить заявку</button>
                         </form>
                     </div>
@@ -669,7 +662,7 @@
                         <h4 class="list-title">Застроищикам</h4>
                         <ul>
                             <li><a href="borehole.html">Геотермальная скважина</a></li>
-                            <li><a href="#">Сделать расчет</a></li>
+                            <li><a href="calculate.html">Рассчитать</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3">
