--- a/calculate.html
+++ b/calculate.html
@@ -9,9 +9,13 @@
     <title>Polaredge</title>
 
     <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" integrity="sha512-qZvrmS2ekKPF2mSznTQsxqPgnpkI4DNTlrdUmTzrDgektczlKNRRhy5X5AAOnx5S09ydFYWWNSfcEqDTTHgtNA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"
+            integrity="sha512-qZvrmS2ekKPF2mSznTQsxqPgnpkI4DNTlrdUmTzrDgektczlKNRRhy5X5AAOnx5S09ydFYWWNSfcEqDTTHgtNA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.debug.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js" integrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoeqMV/TJlSKda6FXzoEyYGjTe+vXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"
+            integrity="sha512-BNaRQnYJYiPSqHHDb58B0yaPfCu+Wgds8Gp/gU33kqBtgNS4tSPHuGibyoeqMV/TJlSKda6FXzoEyYGjTe+vXA=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./libs/jquery-3.7.1.slim.min.js" defer></script>
     <script src="./libs/owl/owl.carousel.min.js" defer></script>
     <script src="./libs/gsap/gsap.min.js" defer></script>
@@ -64,9 +68,13 @@
     </a>
     <a href="catalog.html" class="navbar-link">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M12.3714 2.07152C12.133 1.97616 11.867 1.97616 11.6286 2.07152L1.6286 6.07152C1.24895 6.22339 1 6.5911 1 7C1 7.4089 1.24895 7.77661 1.6286 7.92848L11.6286 11.9285C11.867 12.0238 12.133 12.0238 12.3714 11.9285L22.3714 7.92848C22.7511 7.77661 23 7.4089 23 7C23 6.5911 22.7511 6.22339 22.3714 6.07152L12.3714 2.07152ZM12 9.92297L4.69258 7L12 4.07703L19.3074 7L12 9.92297Z" fill="currentColor"/>
-            <path d="M1.07179 11.6286C1.2769 11.1158 1.85887 10.8664 2.37165 11.0715L12.0002 14.923L21.6288 11.0715C22.1416 10.8664 22.7236 11.1158 22.9287 11.6286C23.1338 12.1414 22.8844 12.7234 22.3716 12.9285L12.3716 16.9285C12.1332 17.0239 11.8672 17.0239 11.6288 16.9285L1.62887 12.9285C1.11609 12.7234 0.866674 12.1414 1.07179 11.6286Z" fill="currentColor"/>
-            <path d="M1.07179 16.6286C1.2769 16.1158 1.85887 15.8664 2.37165 16.0715L12.0002 19.923L21.6288 16.0715C22.1416 15.8664 22.7236 16.1158 22.9287 16.6286C23.1338 17.1414 22.8844 17.7234 22.3716 17.9285L12.3716 21.9285C12.1332 22.0239 11.8672 22.0239 11.6288 21.9285L1.62887 17.9285C1.11609 17.7234 0.866674 17.1414 1.07179 16.6286Z" fill="currentColor"/>
+            <path fill-rule="evenodd" clip-rule="evenodd"
+                  d="M12.3714 2.07152C12.133 1.97616 11.867 1.97616 11.6286 2.07152L1.6286 6.07152C1.24895 6.22339 1 6.5911 1 7C1 7.4089 1.24895 7.77661 1.6286 7.92848L11.6286 11.9285C11.867 12.0238 12.133 12.0238 12.3714 11.9285L22.3714 7.92848C22.7511 7.77661 23 7.4089 23 7C23 6.5911 22.7511 6.22339 22.3714 6.07152L12.3714 2.07152ZM12 9.92297L4.69258 7L12 4.07703L19.3074 7L12 9.92297Z"
+                  fill="currentColor"/>
+            <path d="M1.07179 11.6286C1.2769 11.1158 1.85887 10.8664 2.37165 11.0715L12.0002 14.923L21.6288 11.0715C22.1416 10.8664 22.7236 11.1158 22.9287 11.6286C23.1338 12.1414 22.8844 12.7234 22.3716 12.9285L12.3716 16.9285C12.1332 17.0239 11.8672 17.0239 11.6288 16.9285L1.62887 12.9285C1.11609 12.7234 0.866674 12.1414 1.07179 11.6286Z"
+                  fill="currentColor"/>
+            <path d="M1.07179 16.6286C1.2769 16.1158 1.85887 15.8664 2.37165 16.0715L12.0002 19.923L21.6288 16.0715C22.1416 15.8664 22.7236 16.1158 22.9287 16.6286C23.1338 17.1414 22.8844 17.7234 22.3716 17.9285L12.3716 21.9285C12.1332 22.0239 11.8672 22.0239 11.6288 21.9285L1.62887 17.9285C1.11609 17.7234 0.866674 17.1414 1.07179 16.6286Z"
+                  fill="currentColor"/>
         </svg>
 
         Каталог
@@ -141,7 +149,8 @@
                     <div class="card-inner">
                         <div class="form">
                             <div class="group-form mb-4">
-                                <input type="text" pattern="\d*" class="group-control" id="calculate-input" placeholder="Введите площадь дома в кв м²"
+                                <input type="text" pattern="\d*" class="group-control" id="calculate-input"
+                                       placeholder="Введите площадь дома в кв м²"
                                        oninput="validateNumberInput(this)"/>
                                 <!-- <span class="hint"></span> -->
                             </div>
@@ -172,7 +181,7 @@
                                 </li>
                                 <li>
                                     <span class="title">Расчет стоимости работ</span>
-                                    <span class="price">1 023 566 ₸</span>
+                                    <span class="price" id="works-price">1 023 566 ₸</span>
                                     <div class="checkbox-group">
                                         <input id="putty" class="checkbox" type="checkbox">
                                         <label for="putty" class="checkbox-label">+ Левкас (шпатлевка)</label>
@@ -184,23 +193,26 @@
                                 </li>
 
                             </ul>
-<!--                            <ul class="details-list">-->
-<!--                                <li>-->
-<!--                                    <input type="checkbox" id="hot-water"/>-->
-<!--                                    <label for="hot-water">+ Горячая вода</label>-->
-<!--                                </li>-->
-<!--                                <li>-->
-<!--                                    <input type="checkbox" id="putty"/>-->
-<!--                                    <label for="putty">+ Левкас (шпатлевка)</label>-->
-<!--                                <li>-->
+                            <!--                            <ul class="details-list">-->
+                            <!--                                <li>-->
+                            <!--                                    <input type="checkbox" id="hot-water"/>-->
+                            <!--                                    <label for="hot-water">+ Горячая вода</label>-->
+                            <!--                                </li>-->
+                            <!--                                <li>-->
+                            <!--                                    <input type="checkbox" id="putty"/>-->
+                            <!--                                    <label for="putty">+ Левкас (шпатлевка)</label>-->
+                            <!--                                <li>-->
 
 
-<!--                            </ul>-->
+                            <!--                            </ul>-->
                         </div>
                         <button class="btn-icon btn btn-sndry mt-3" onclick="generatePDF()">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M11 13.5858V2C11 1.44771 11.4477 1 12 1C12.5523 1 13 1.44771 13 2V13.5858L16.2929 10.2929C16.6834 9.90237 17.3166 9.90237 17.7071 10.2929C18.0976 10.6834 18.0976 11.3166 17.7071 11.7071L12.7071 16.7071C12.3166 17.0976 11.6834 17.0976 11.2929 16.7071L6.29289 11.7071C5.90237 11.3166 5.90237 10.6834 6.29289 10.2929C6.68342 9.90237 7.31658 9.90237 7.70711 10.2929L11 13.5858Z" fill="#333333"/>
-                                <path d="M2 15C2.55228 15 3 15.4477 3 16V20C3 20.5523 3.44772 21 4 21H20C20.5523 21 21 20.5523 21 20V16C21 15.4477 21.4477 15 22 15C22.5523 15 23 15.4477 23 16V20C23 21.6569 21.6569 23 20 23H4C2.34315 23 1 21.6569 1 20V16C1 15.4477 1.44772 15 2 15Z" fill="#333333"/>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                 xmlns="http://www.w3.org/2000/svg">
+                                <path d="M11 13.5858V2C11 1.44771 11.4477 1 12 1C12.5523 1 13 1.44771 13 2V13.5858L16.2929 10.2929C16.6834 9.90237 17.3166 9.90237 17.7071 10.2929C18.0976 10.6834 18.0976 11.3166 17.7071 11.7071L12.7071 16.7071C12.3166 17.0976 11.6834 17.0976 11.2929 16.7071L6.29289 11.7071C5.90237 11.3166 5.90237 10.6834 6.29289 10.2929C6.68342 9.90237 7.31658 9.90237 7.70711 10.2929L11 13.5858Z"
+                                      fill="#333333"/>
+                                <path d="M2 15C2.55228 15 3 15.4477 3 16V20C3 20.5523 3.44772 21 4 21H20C20.5523 21 21 20.5523 21 20V16C21 15.4477 21.4477 15 22 15C22.5523 15 23 15.4477 23 16V20C23 21.6569 21.6569 23 20 23H4C2.34315 23 1 21.6569 1 20V16C1 15.4477 1.44772 15 2 15Z"
+                                      fill="#333333"/>
                             </svg>
                             Скачать документ
                         </button>
