Alim sdelal mnogo chego

--- a/catalog-inner.html
+++ b/catalog-inner.html
@@ -159,7 +159,7 @@
                             <h2>Описание Серия U</h2>
                             <ul class="catalog-desc">
                                 <li>
-                                    <span class="label">Материал (синего цвета) <small>Предназначен под пайку, максимальная площадь в сборе одного мата 36 м²</small></span>
+                                    <span class="label">Материал (синего цвета) <small>Предназначен под пайку, максимальная площадь одного мата 36 м²</small></span>
                                     <span class="text">Полипропилен (PP-R) без вторичных добавок</span>
                                 </li>
                                 <li>
@@ -180,7 +180,7 @@
                                 </li>
                                 <li>
                                     <span class="label">Длина капиллярного мата (L)</span>
-                                    <span class="text">600-12000 мм по индивидуальному заказу</span>
+                                    <span class="text">600-12 000 мм (зависит от заказа)</span>
                                 </li>
                                 <li>
                                     <span class="label">Вес капиллярного мата</span>
@@ -206,11 +206,11 @@
                             <ul class="catalog-desc">
                                 <li>
                                     <span class="label">Испытательное давление сжатым воздухом при температуре +22С</span>
-                                    <span class="text">20 бар.</span>
+                                    <span class="text">20 бар</span>
                                 </li>
                                 <li>
                                     <span class="label">Испытательное давление сжатым воздухом при температуре +22С</span>
-                                    <span class="text">3-4 бар,</span>
+                                    <span class="text">3-4 бар</span>
                                 </li>
                             </ul>
                         </div>
@@ -218,11 +218,11 @@
                             <h2>Температура</h2>
                             <ul class="catalog-desc">
                                 <li>
-                                    <span class="label">Для отопления (в стяжке пола, стенах, потолке, шкаф, подвесной потолок)</span>
+                                    <span class="label">Отопление (при установке в стяжке пола, стенах, потолке, шкафу, подвесном потолке)</span>
                                     <span class="text">28 - 55℃</span>
                                 </li>
                                 <li>
-                                    <span class="label">Для охлаждения (штукатурка потолка, подвесной потолок, стены)</span>
+                                    <span class="label">Охлаждение (при установке в штукатурке потолка, подвесном потолке, стенах)</span>
                                     <span class="text">12 - 20℃ (выше точки росы)</span>
                                 </li>
                                 <li>
@@ -235,24 +235,24 @@
                             <h2>Мощность обогрева/охлаждения</h2>
                             <ul class="catalog-desc">
                                 <li>
-                                    <span class="label">Подогрев пола до</span>
-                                    <span class="text">76 Вт/м²</span>
+                                    <span class="label">Подогрев пола</span>
+                                    <span class="text">до 76 Вт/м²</span>
                                 </li>
                                 <li>
-                                    <span class="label">Мощность обогрева стен до</span>
-                                    <span class="text">70 Вт/м²</span>
+                                    <span class="label">Мощность обогрева стен</span>
+                                    <span class="text">до 70 Вт/м²</span>
                                 </li>
                                 <li>
-                                    <span class="label">Холодопроизводительность стен до</span>
-                                    <span class="text">80 Вт/м²</span>
+                                    <span class="label">Холодопроизводительность стен</span>
+                                    <span class="text">до 80 Вт/м²</span>
                                 </li>
                                 <li>
-                                    <span class="label">Холодопроизводительность потолка до</span>
-                                    <span class="text">90 Вт/м²</span>
+                                    <span class="label">Холодопроизводительность потолка</span>
+                                    <span class="text">до 90 Вт/м²</span>
                                 </li>
                             </ul>
                         </div>
-                        <p class="other-text">Удельная мощность зависит от температуры подаваемой воды, и температуры в помещении.</p>
+                        <p class="other-text">Удельная мощность зависит от температуры подаваемой воды и температуры в помещении.</p>
 
                     </div>
                 </div>
@@ -274,7 +274,7 @@
                             <h2>Описание Серия H</h2>
                             <ul class="catalog-desc">
                                 <li>
-                                    <span class="label">Материал (синего цвета) <small>Предназначен под пайку, максимальная площадь в сборе одного мата 36 м²</small></span>
+                                    <span class="label">Материал (синего цвета) <small>Предназначен под пайку, максимальная площадь одного мата 36 м²</small></span>
                                     <span class="text">Полипропилен (PP-R) без вторичных добавок</span>
                                 </li>
                                 <li>
@@ -295,7 +295,7 @@
                                 </li>
                                 <li>
                                     <span class="label">Длина капиллярного мата (L)</span>
-                                    <span class="text">600-12000 мм по индивидуальному заказу</span>
+                                    <span class="text">600-12 000 мм (зависит от заказа)</span>
                                 </li>
                                 <li>
                                     <span class="label">Вес капиллярного мата</span>
@@ -321,11 +321,11 @@
                             <ul class="catalog-desc">
                                 <li>
                                     <span class="label">Испытательное давление сжатым воздухом при температуре +22С</span>
-                                    <span class="text">20 бар.</span>
+                                    <span class="text">20 бар</span>
                                 </li>
                                 <li>
                                     <span class="label">Испытательное давление сжатым воздухом при температуре +22С</span>
-                                    <span class="text">3-4 бар,</span>
+                                    <span class="text">3-4 бар</span>
                                 </li>
                             </ul>
                         </div>
@@ -333,11 +333,11 @@
                             <h2>Температура</h2>
                             <ul class="catalog-desc">
                                 <li>
-                                    <span class="label">Для отопления (в стяжке пола, стенах, потолке, шкаф, подвесной потолок)</span>
+                                    <span class="label">Отопление (при установке в стяжке пола, стенах, потолке, шкафу, подвесном потолке)</span>
                                     <span class="text">28 - 55℃</span>
                                 </li>
                                 <li>
-                                    <span class="label">Для охлаждения (штукатурка потолка, подвесной потолок, стены)</span>
+                                    <span class="label">Охлаждение (при установке в штукатурке потолка, подвесном потолке, стенах)</span>
                                     <span class="text">12 - 20℃ (выше точки росы)</span>
                                 </li>
                                 <li>
@@ -350,24 +350,24 @@
                             <h2>Мощность обогрева/охлаждения</h2>
                             <ul class="catalog-desc">
                                 <li>
-                                    <span class="label">Подогрев пола до</span>
-                                    <span class="text">76 Вт/м²</span>
+                                    <span class="label">Подогрев пола</span>
+                                    <span class="text">до 76 Вт/м²</span>
                                 </li>
                                 <li>
-                                    <span class="label">Мощность обогрева стен до</span>
-                                    <span class="text">70 Вт/м²</span>
+                                    <span class="label">Мощность обогрева стен</span>
+                                    <span class="text">до 70 Вт/м²</span>
                                 </li>
                                 <li>
-                                    <span class="label">Холодопроизводительность стен до</span>
-                                    <span class="text">80 Вт/м²</span>
+                                    <span class="label">Холодопроизводительность стен</span>
+                                    <span class="text">до 80 Вт/м²</span>
                                 </li>
                                 <li>
-                                    <span class="label">Холодопроизводительность потолка до</span>
-                                    <span class="text">90 Вт/м²</span>
+                                    <span class="label">Холодопроизводительность потолка</span>
+                                    <span class="text">до 90 Вт/м²</span>
                                 </li>
                             </ul>
                         </div>
-                        <p class="other-text">Удельная мощность зависит от температуры подаваемой воды, и температуры в помещении.</p>
+                        <p class="other-text">Удельная мощность зависит от температуры подаваемой воды и температуры в помещении.</p>
 
                     </div>
                 </div>
